Added AppHarbor as collabortor to the project

--- a/ITGeekProject/ITGeekProject/Views/Home/Index.cshtml
+++ b/ITGeekProject/ITGeekProject/Views/Home/Index.cshtml
@@ -5,6 +5,12 @@
 <div class="jumbotron" style="text-align:center">
     <h1 style="font-family:Algerian">IT Geek Project</h1>
     <p style="font-family:Algerian" >Alex's Project added to GitHub and hosted by AppHarbor</p>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <small style="font-family:Algerian" >Now hosted by AppHarbor</small>
 </div>
 
 <div class="row">
