Added images to the project

--- a/ITGeekProject/ITGeekProject/Views/Home/Index.cshtml
+++ b/ITGeekProject/ITGeekProject/Views/Home/Index.cshtml
@@ -10,7 +10,8 @@
     <br />
     <br />
     <br />
-    <small style="font-family:Algerian" >Now hosted by AppHarbor</small>
+    <small style="font-family:Algerian">Now hosted by AppHarbor</small>
+    <small style="font-family:Algerian">and help from: &copy; sashe944444</small>
 </div>
 
 <div class="row">
